[tool.poetry]
name = "chanchito"
version = "0.1.0"
description = "Open Banking API"
authors = ["Eduardo <e.dev@xor.cl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
